[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/Awake/Awake.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://interfaces/tooltip_button.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "focus"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Line2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Line2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Line2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Button" type="Button"]
margin_left = 5.0
margin_right = 59.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 1 )
text = "Quit"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -79.5
margin_right = 112.0
margin_bottom = -32.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "No lawyer cat available"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/focus = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="Line2D" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.179929 )
position = Vector2( 0, 56 )
points = PoolVector2Array( 0, 0, 54, 0 )
width = 5.0
default_color = Color( 0.141176, 0.145098, 0.176471, 1 )

[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
